nullaway_error_CE83AA3F-AE3F-4306-B5AB-7F7884650AEA.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-aop/src/main/java/org/springframework/aop/aspectj/AbstractAspectJAdvice.java:580: error: [NullAway] unboxing of a @Nullable value
					adviceInvocationArgs[index] = parameter.getBinding();
					                     ^
    (see http://t.uber.com/nullaway )
